<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/actionStanding"
        android:title="@string/actionPlayerStanding"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_trophy"
        app:iconTint="?attr/colorOnSurfaceVariant"
        />

    <item
        android:id="@+id/actionGraph"
        android:title="@string/actionGraph"
        app:showAsAction="never"
        android:icon="@drawable/ic_timeline_black"
        app:iconTint="?attr/colorOnSurfaceVariant"
        />

    <item
        android:id="@+id/actionEdit"
        android:title="@string/actionEdit"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"
        app:iconTint="?attr/colorOnSurfaceVariant"
        />

    <item
        android:id="@+id/actionDeleteRounds"
        android:title="@string/deleteRounds"
        app:showAsAction="never"
        android:icon="@drawable/ic_clear_black"
        app:iconTint="?attr/colorOnSurfaceVariant"
        />

    <item
        android:id="@+id/actionNewGame"
        android:title="@string/gameCreateTitle"
        app:showAsAction="never"
        android:icon="@drawable/ic_add_black"
        app:iconTint="?attr/colorOnSurfaceVariant"
        />
</menu>
