<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_game_create"
    >

    <LinearLayout
        android:id="@+id/hasDealerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="8dp"
        android:gravity="end"
        android:minHeight="@dimen/min_touch_size"
        android:orientation="horizontal"
        >

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/hasDealerCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            style="@style/AppTheme.TextListHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/dealerLabel"
            android:labelFor="@id/hasDealerCheckbox"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reversedScoringContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        >

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/reversedScoringCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            >

            <TextView
                style="@style/AppTheme.TextListHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reversedScoringTitle"
                android:labelFor="@id/reversedScoringCheckbox"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/reversedScoringDescription"
                style="@style/AppTheme.TextListSupporting"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/showNotesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        >

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/showNotesCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            >

            <TextView
                style="@style/AppTheme.TextListHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showRoundNotesTitle"
                android:labelFor="@id/showNotesCheckbox"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/showRoundNotesDescription"
                style="@style/AppTheme.TextListSupporting"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/useCalculatorContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        >

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/useCalculatorCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            >

            <TextView
                style="@style/AppTheme.TextListHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useCalculatorTitle"
                android:labelFor="@id/useCalculatorCheckbox"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/useCalculatorDescription"
                style="@style/AppTheme.TextListSupporting"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:hint="@string/maxScoreTitle"
            app:helperText="@string/maxScoreDescription"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/maxScoreEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:hint="@string/maxRoundsTitle"
            app:helperText="@string/maxRoundsDescription"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/maxRoundsEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</merge>
