<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScrollTargetViewId="@id/settingsContainer"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/actionSettings"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/settingsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- Appearance (only shown on devices that support dynamic color) -->
            <LinearLayout
                android:id="@+id/appearanceSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/AppTheme.SettingsSubheader"
                    android:text="@string/settingsAppearanceHeader"
                    />

                <LinearLayout
                    android:id="@+id/dynamicColorRow"
                    style="@style/AppTheme.SettingsRow"
                    >

                    <ImageView
                        style="@style/AppTheme.SettingsRowIcon"
                        android:src="@drawable/ic_palette"
                        tools:ignore="ContentDescription"
                        />

                    <LinearLayout style="@style/AppTheme.SettingsRowText">

                        <TextView
                            style="@style/AppTheme.TextListHeadline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsDynamicColorTitle"
                            android:labelFor="@id/dynamicColorSwitch"
                            />

                        <TextView
                            style="@style/AppTheme.TextListSupporting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsDynamicColorSummary"
                            />
                    </LinearLayout>

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/dynamicColorSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:saveEnabled="false"
                        android:layout_marginStart="@dimen/fab_margin"
                        />
                </LinearLayout>
            </LinearLayout>

            <!-- About -->
            <TextView
                style="@style/AppTheme.SettingsSubheader"
                android:text="@string/settingsAboutHeader"
                />

            <LinearLayout
                android:id="@+id/changelogRow"
                style="@style/AppTheme.SettingsRow"
                >

                <ImageView
                    style="@style/AppTheme.SettingsRowIcon"
                    android:src="@drawable/ic_notes_black"
                    tools:ignore="ContentDescription"
                    />

                <LinearLayout style="@style/AppTheme.SettingsRowText">

                    <TextView
                        style="@style/AppTheme.TextListHeadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actionChangelog"
                        />

                    <TextView
                        style="@style/AppTheme.TextListSupporting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsChangelogSummary"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rateRow"
                style="@style/AppTheme.SettingsRow"
                >

                <ImageView
                    style="@style/AppTheme.SettingsRowIcon"
                    android:src="@drawable/ic_star"
                    tools:ignore="ContentDescription"
                    />

                <LinearLayout style="@style/AppTheme.SettingsRowText">

                    <TextView
                        style="@style/AppTheme.TextListHeadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actionRateApp"
                        />

                    <TextView
                        style="@style/AppTheme.TextListSupporting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsRateSummary"
                        />
                </LinearLayout>
            </LinearLayout>

            <!-- Version is informational only, so the row isn't clickable -->
            <LinearLayout
                style="@style/AppTheme.SettingsRow"
                android:background="@null"
                >

                <ImageView
                    style="@style/AppTheme.SettingsRowIcon"
                    android:src="@drawable/ic_info"
                    tools:ignore="ContentDescription"
                    />

                <LinearLayout style="@style/AppTheme.SettingsRowText">

                    <TextView
                        style="@style/AppTheme.TextListHeadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsVersionTitle"
                        />

                    <TextView
                        android:id="@+id/versionText"
                        style="@style/AppTheme.TextListSupporting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        tools:text="1.6.7 (18)"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
